--- a/index.html
+++ b/index.html
@@ -29,7 +29,33 @@
             <br><br>  
             <div id="canvas"></div>
             <br><br>
-            <button class="btn btn-danger">Reinicio</button>
+
+            <button class="btn btn-danger" onclick="restart();" id="restart">Reinicio</button>
+
+                
+    <h4>
+       Desarrollado por: Samuel
+    </h4>
+  <!--Creamos un modal -cuadro de diálogo  para las instrucciones-->
+      <div id="myModal" class="modal fade" >
+        <div class="modal-dialog" >
+          <div class="modal-content">
+            <div class="modal-header" >
+              <button class="close" data-dismiss="modal" >
+                &times;
+              </button>
+              <h4>Instrucciones</h4>
+            </div>
+                <div class="modal-body">
+                    <ol>Primero, mantén la pantalla de tu computadora portátil recta
+                        Aléjate aproximadamente un metro de tu computadora
+                        Mueve tu muñeca derecha de forma ascendente y descendente, debería aparecer un punto rojo en tu muñeca derecha
+                        Ahora haz clic en el botón para jugar, y de nuevo aléjate aproximadamente un metro de tu computadora
+                        La paleta roja es tu paleta, se moverá según el movimiento de tu muñeca derecha</ol>
+                </div>
+          </div>
+        </div>
+      </div>
 
 
         </center>
